[package]
name = "ipquery"
version = "0.1.1"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"
description = "Tool to query your own public IP address."
repository = "https://github.com/xfbs/ipquery"
license = "MIT"

[dependencies]
trust-dns = "0.16"
failure = "0.1.5"
trust-dns-resolver = "0.11.1"
igd = "0.9.0"
